...

  return (
    <ModalView
      title={title}
      right={
        <Button
          testID="list-name-button"
          borderRadius={16}
          size="sm"
          mr="$4"
          style={{
            alignSelf: 'flex-end',
          }}
...
        </Button>
      }>
      <Box p="$4">
        <FormControl mb="$5" isInvalid={!actionEnabled}>
          <Input width="100%" size={media.md ? 'xl' : undefined}>
            <InputField
              testID="list-name-input"
              autoFocus
              value={name}
              onChangeText={setName}
              clearButtonMode="always"
              autoCorrect={false}
              sx={{
...
