...
      color: 'white',
      fontSize: media.md ? 24 : 16,
      lineHeight: media.md ? 26 : 20,
    },
    headerTintColor: 'white',
    headerBackTitle: i18n.t('ui.back'),
    headerBackTestID: 'back-button',
    headerBackTruncatedTitle: i18n.t('ui.back'),
  };
  return options;
};

export const HeaderButton = (props: {
...
  if (!song) {
    return null;
  }

  return (
    <HeaderButton
      testID="view-pdf-button"
      iconName="FileTextIcon"
      onPress={async () => {
        const { fullText } = song;
        const parser = new SongsParser(PdfStyles);
        const render = parser.getForRender(
          fullText,
...
